# -Computer-Vision

./: audio.py  eyedetection.py  pyproject.toml  requirements.txt  yolo.py  yolov5_jp.py
.github/workflows/: linting.yaml
drafts/: eyedetection.py  facedetection.py  handydetection.py  humandetection.py
src/: main.py
src/audio/: audio.py
src/typings/: draw.py
src/video/: recognition.py
src/video/exceptions/: __init__.py
src/video/utils/: frame.py
